# gtk-rs-experiment

./: Cargo.toml  LICENSE  README.md  report.tex
src/: main.rs  ml.rs  utils.rs
src/pages/: choose.rs  mod.rs  model.rs  processing.rs
