[package]
authors = ["Archit Bhonsle <abhonsle2000@gmail.com>"]
description = "A simple app to experiment with GTK with Rust"
edition = "2018"
license = "MIT"
name = "gtk-rs-experiment"
version = "0.1.0"

[dependencies]
futures = "0.3"
gdk = "0.13"
gio = "0.9"
glib = "0.10"
gtk = "0.9"
ndarray = {version = "0.13"}
plotters = "0.3"
plotters-cairo = "0.3"
polars = {version = "0.13", git = "https://github.com/ritchie46/polars", features = ["ndarray"]}
rand = "0.8.3"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"
